--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -7,10 +7,10 @@ footer {
     margin-bottom: 0;
     width: 100%;
     bottom: 0;
-    position: fixed;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-top: 1px solid rgb(0, 0, 0);
-    /* background-color: #E5E5E5; */
+    /* border-top: 1px solid rgb(0, 0, 0); */
+    background-color: #E5E5E5;
 }
