--- a/newsaroundyouapp/templates/news/noresults.html
+++ b/newsaroundyouapp/templates/news/noresults.html
@@ -5,12 +5,281 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
     <link rel="stylesheet" href="{% static 'styles/header.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/footer.css' %}"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+
+        /* general font */
+        * .roboto-slab-uniquifier {
+            font-family: "Roboto Slab", serif;
+            font-optical-sizing: auto;
+            font-style: normal;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .content {
+            max-width: 1500px;
+            margin: 10px auto;
+        }
+        /* Navigation Bar */
+        header {
+            position: fixed;
+            z-index: 1000;
+            top: 0;
+            background-color: white;
+            margin: 0px auto 10px auto;
+            padding-bottom: 5px;
+            padding-top: 5px;
+            width: 100%;
+        }
+        main {
+            z-index: 500;
+        }
+        nav {
+            align-items: center;
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            margin: 0;
+            padding: 0;
+            flex-wrap: wrap;
+        }
+
+        nav ul li {
+            display: block;
+        }
+        nav ul li:hover {
+            background-color: rgb(0, 174, 255);
+            color: white;
+        }
+        nav ul li a {
+            color: #12141a;
+            text-decoration: none;
+            font-weight: 500;
+            cursor: pointer;
+            line-height: 18px;
+        }
+        nav ul li a:hover{
+            color: white;
+        }
+        /* Hero Section */
+        .banner {
+            text-align: center;
+            padding: 100px 20px;
+            background-attachment: fixed;
+            background-size: cover;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            color: black;
+            height: 600px;
+            width: 95%;
+        }
+        #title_2 {
+            font-weight: 500;
+            font-size: 18px;
+            font-weight: 400;
+            margin-top: 10px;
+        }
+        #button {
+            color: rgb(0, 174, 255);
+            font-size: 18px;
+            padding: 15px 25px;
+            border-radius: 30px;
+            border: 0px;
+            font-weight: 500;
+            font-family: "Roboto Slab", serif;
+        }
+        #welcome {
+            margin: 50px;
+            text-align: left;
+        }
+        .stayinformed {
+            font-weight: 500;
+            margin-top: 200px;
+            margin-bottom: 100px;
+        }
+        /* Search Bar */
+        .search {
+            margin-top: 50px;
+        }
+        .search-bar {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border: 2px solid #ccc;
+            border-radius: 50px;
+            width: 500px;
+            background: white;
+            margin: 20px auto;
+        }
+
+        .search-bar input {
+            flex-grow: 1;
+            border: 0;
+            outline: none;
+            padding: 8px;
+            border-radius: 50px;
+            font-family: "Roboto Slab", serif;
+            font-size: 14px;
+        }
+
+        .recent-articles h2 {
+            text-align: center;
+            margin: 100px 0px 40px 0px;
+        }
+        .stayinformed h2 {
+            font-size: 40px;
+        }
+
+        /* News Section */
+        .news-card {
+            border-top: 1px solid grey;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+        .news-image img {
+            max-height: 150px;
+            object-fit: cover;
+        }
+        .news-content h3 {
+            margin-top: 10px;
+            font-size: 1.15rem;
+        }
+        .news-content h5 {
+            font-size: 13px;
+            font-weight: 400;
+        }
+        .card {
+            width: 100%;
+            display: flex;
+            text-decoration: none;
+            color: black;
+        }
+        .news-content {
+            margin-left: 30px;
+        }
+        .news-content p {
+            font-size: 15px;
+            line-height: 18px;
+            font-weight: 400;
+            margin-top: 10px;
+            color: black
+        }
+        .news-metadata {
+            margin-top: 10px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+        }
+        /* pagination */
+        .pagination {
+            display: none;
+            font-family: 'Poppins', sans-serif;
+            text-align: center;
+        }
+
+        .sources-block {
+            text-align: center;
+            font-size: 20px;
+            border-top: 2px solid rgba(151, 151, 151, 0.763);
+        }
+        .sources-block h4 {
+            padding-top: 40px;
+            font-size: 18px;
+            font-weight: 500;
+            margin: 10px 0px auto;
+        }
+
+        a {
+            color: rgb(0, 174, 255);
+        }
+        .sources {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .sources li {
+            flex-shrink: 1;
+            padding: 20px;
+            list-style-type: none;
+        }
+        span {
+            color: rgb(0, 174, 255);
+        }
+        #home {
+            display: block;
+            border: 1px solid black;
+            padding-left: 3px;
+            padding-right: 3px;
+        }
+
+        /* testing footer placement */
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .content {
+            flex: 1;
+            padding: 20px;
+        }
+        header {
+            display: flex;
+            text-align: center;
+            align-items: center;
+            justify-content: space-around;
+            margin-bottom: 40px;
+        }
+        nav ul li {
+            display: inline-block;
+            list-style-type: none;
+            padding: 10px;
+            margin: 10px;
+        }
+        nav ul {
+            display: flex;
+        }
+        footer {
+            height: 80px;
+            margin-bottom: 0;
+            width: 100%;
+            bottom: 0;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            /* border-top: 1px solid rgb(0, 0, 0); */
+            background-color: #E5E5E5;
+        }
+        .stayinformed h1 {
+            font-size: 80px;
+        }
+        .stayinformed h2 {
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body class="roboto-slab-uniquifier">
     <header>
